[tool.poetry]
name = "sqlalchemy_testing"
version = "0.1.0"
description = "Testing SQLAlchemy Session Management"
authors = ["Douglas Adams <douglasryanadams@gmail.com>"]
license = "Unlicensed"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.8.6"
SQLAlchemy = "^1.4.5"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
